# ChangeLog for dev-ruby/kramdown
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/kramdown/ChangeLog,v 1.24 2013/08/08 19:30:13 maekke Exp $

  08 Aug 2013; Markus Meier <maekke@gentoo.org> kramdown-1.1.0.ebuild:
  add ~arm, bug #477648

*kramdown-1.1.0 (14 Jul 2013)

  14 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +kramdown-1.1.0.ebuild:
  Version bump

*kramdown-1.0.2 (29 May 2013)

  29 May 2013; Hans de Graaff <graaff@gentoo.org> +kramdown-1.0.2.ebuild:
  Version bump, thanks to mrueg in the ruby overlay.

  05 May 2013; Hans de Graaff <graaff@gentoo.org> -kramdown-0.14.1.ebuild:
  Cleanup.

*kramdown-0.14.2 (12 Mar 2013)

  12 Mar 2013; Hans de Graaff <graaff@gentoo.org> +kramdown-0.14.2.ebuild:
  Version bump.

  12 Mar 2013; Hans de Graaff <graaff@gentoo.org> -kramdown-0.13.8.ebuild,
  -kramdown-0.14.0.ebuild:
  Cleanup.

*kramdown-0.14.1 (01 Dec 2012)

  01 Dec 2012; Hans de Graaff <graaff@gentoo.org> +kramdown-0.14.1.ebuild:
  Version bump. Add missing htmltidy test dependency thanks to mrueg.

*kramdown-0.14.0 (16 Sep 2012)

  16 Sep 2012; Diego E. Pettenò <flameeyes@gentoo.org> +kramdown-0.14.0.ebuild:
  Version bump.

*kramdown-0.13.8 (01 Sep 2012)

  01 Sep 2012; Diego E. Pettenò <flameeyes@gentoo.org> +kramdown-0.13.8.ebuild,
  -kramdown-0.13.7.ebuild:
  Version bump; make sure latex dependencies are also added during test with the
  flag enabled; use the rdoc recipe for documentation building.

  25 Aug 2012; Hans de Graaff <graaff@gentoo.org> -kramdown-0.13.3.ebuild,
  -kramdown-0.13.4.ebuild, -kramdown-0.13.5.ebuild, -kramdown-0.13.5-r1.ebuild,
  -kramdown-0.13.6.ebuild:
  Cleanup.

*kramdown-0.13.7 (04 Jun 2012)

  04 Jun 2012; Diego E. Pettenò <flameeyes@gentoo.org> +kramdown-0.13.7.ebuild:
  Version bump.

  12 May 2012; Alex Legler <a3li@gentoo.org> kramdown-0.13.5-r1.ebuild,
  kramdown-0.13.6.ebuild:
  Keyword ~x86, bug 407765

*kramdown-0.13.6 (10 May 2012)
