@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/kramdown/kramdown-1.1.0.ebuild,v 1.2 2013/08/08 19:30:13 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/kramdown/kramdown-1.1.0.ebuild,v 1.3 2013/08/24 16:26:38 maekke Exp $
 
 EAPI=5
 USE_RUBY="ruby18 ruby19"
@@ -17,7 +17,7 @@ HOMEPAGE="http://kramdown.rubyforge.org/"
 LICENSE="MIT"
 
 SLOT="0"
-KEYWORDS="~amd64 ~arm"
+KEYWORDS="~amd64 ~arm ~x86"
 IUSE="latex"
 
 LATEX_DEPS="latex? ( dev-texlive/texlive-latex dev-texlive/texlive-latexextra )"
