@@ -6,13 +6,13 @@ DIST stringex-2.0.7.gem 122368 SHA256 72a34a18b500e028f078addb34587f703a195c5709
 DIST stringex-2.0.8.gem 122368 SHA256 d4cd8b7184c799a3d0d9f9f3c6b8864f3466fce97c3821a93158b5c4dcafeac7 SHA512 c87996943dfd3bb592c58493adba9d2509a6b0c2fd688ee08d8d00783b87653e4769f74c986e9897e0b10141ac32fa9f69ccdc9489ec96d8584778d6338abddb WHIRLPOOL 4e7ab08bb44cf793c9ea66d5565738290b95c438c7608cb9bb8d56c4b760b522076adbefcc04d6119fe54c8f4a746647184160b40714d6c370f295bf3f244733
 EBUILD stringex-1.5.1.ebuild 961 SHA256 9c41e8999cc5a422c43f5a92c543385a3f83f7c88f4715ef048379d137ccb1f7 SHA512 022ad21da74d3f2f94e8da1cf367971da0e7b40fda188996302501b68f98fb923e543dcf0b0926735df22b73b5385833a411423429e79a4290f5530e7fa3613e WHIRLPOOL 4a73c830718ecb527d93d327cf9c9875aefc5fc6b4ea44fc9c7398c75978d1f48e8cccc5c475135d6df155638daa2f68a334588cfdb7a141ed0cf02c89b11ae0
 EBUILD stringex-2.0.7.ebuild 990 SHA256 357e27fb159424bf9e1ab14fbd6658f8053883a69c983c464c40d7d173a74ea4 SHA512 cad5d1cdd2a6955ed51b08668777bbf8501d9632e0b7c27bf0c1a10a4d2ff73bb334bc6e4225ba847acca8c77396c9acb172db6fef42958ee7c2e7948318886f WHIRLPOOL 71a10b4dd42574d91956d2df4cf866945ee152a03038bcaddf306d1512e5e6286ce06885fc93208151b571fb0c992e07ca49d0f677caed3517022211bdc05387
-EBUILD stringex-2.0.8.ebuild 990 SHA256 a8ad0e49a66ddf0a2447442439ef929bb7eff753857d4d8053b27cb0d0e7d4a9 SHA512 df8b190ae7e3a00e2b94a289f8b45d7ef532d7a4d78b38d00061f95132379dd3ecdddbd3d45fb436caaf4dc70cabf1f4420baf13a9c5f679308fd62ed3b589b5 WHIRLPOOL 37b94183da680cbe386e845d2d082b9e685bd141a0adb17bec903b7c85c803ea4ec56fb64899b1039d1a99debcde2d65e774a3afbde0c61f0de2c19002dd5c76
-MISC ChangeLog 2049 SHA256 54560aa0f10d00a9733596a73bffa8160052dc1676d31a7f214c41ca2286c4fb SHA512 60ae88f437da33562a7d30eb177b913709577dd609c2bd9ac80f27d33648362177033e623d7036844539bfa489ad965e03955c8c33b3ef1ba6590864cd78b8d6 WHIRLPOOL caae44f4caa8fa91454270097ac58da4d13a2109ddf498c0fa62c2d9d1adce25a3ceadd8ebf2703df83ba487ef7b24f0eb27d1f351d6e4300dbf12e7400cbda5
+EBUILD stringex-2.0.8.ebuild 995 SHA256 7bc50698dbb66ab371f89bff4ce2b42274e5a89f5e79f80242e6f7aa529c99a6 SHA512 b8ecb13c33181288905659236f05b5fd36d86a8c3a2b82d45f13b90a0d202f5e59a16640286306c45482245603a15665d763e679cfffdde0d42df01944bc5d15 WHIRLPOOL 2258f5a764cd3f24c2fe8262ef921dcd8fff2183b8b14041fc433705a4484388e15f53f456862eb328818f7d166223bc2956af028fba70ec1e4cd503055157fd
+MISC ChangeLog 2145 SHA256 07e5cd102727740cffc0c237679c3c612aeae69f40074df9d629ca7679b0652a SHA512 4a5bd3c39c4facda0e7f692f04928e8af41e72ef528a65f06fedbd5b705c211d89facc1465f255f7f832a201d0e1c2ca73c6e16e5228be89ffd7cbe9cb2c6cbb WHIRLPOOL 0d92310f4c7fdb3a8e2464330ebb20d9a539e816bf074aae5295b649276194a34223adf0240e278fcdccaca1367bc6420e6343757c37962c9d570789acd3d801
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlIPGLMACgkQiIP6VqMIqNdscAEAhEkxX79POr5JusEi+BLC4jfk
-SSSA0r3B1hLK3NyfykQBAItrWUV3d0Ha0epaLPDB9GEZfs/D2JAyXFMeZx1ExJAD
-=IuAZ
+iEYEAREIAAYFAlIY4A0ACgkQkKaRLQcq0GLg/gCffRyoKgGc1p9zsK0TXlhGQWbq
+UBYAn3FSH+D8nmZiPETnh2fEUJpY7Mlg
+=n6nf
 -----END PGP SIGNATURE-----
