@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stringex/stringex-2.0.8.ebuild,v 1.1 2013/08/17 06:31:14 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stringex/stringex-2.0.8.ebuild,v 1.2 2013/08/24 16:26:05 maekke Exp $
 
 EAPI=5
 USE_RUBY="ruby18 ruby19"
@@ -15,7 +15,7 @@ HOMEPAGE="http://github.com/rsl/stringex"
 LICENSE="MIT"
 
 SLOT="0"
-KEYWORDS="~amd64 ~arm"
+KEYWORDS="~amd64 ~arm ~x86"
 IUSE="test"
 
 # we could rely on activerecord[sqlite3], but since we do not remove the
