@@ -2,17 +2,13 @@
 Hash: SHA256
 
 DIST howdoi-1.1.3.tar.gz 5745 SHA256 8ca1f246a2d7bb3dd307906fecc784cc9a2e409dc1cc06b6061009d2203a9560 SHA512 15d54545fb2f61b5f059a42be275ec5d2b9ad1a69bb277a03521bba2ebbce501b69b37db456f60d6cb3e823207b69ae694aeba9eb87c94749ba543b9b043960c WHIRLPOOL 180a0f45b451703d4a09342f9570eb4004be4d9586d17e81267d862a78edc4d2772335b31fda0ed01a5a66dcd1b35db2545abb7af916b940cdd407e4d3149ca9
-EBUILD howdoi-1.1.3.ebuild 693 SHA256 560dabeb9b9cf5bcf70df16d6b9c99c83d8380fc32585e06bb2aa91fdf5f66fe SHA512 f08ac5290f1226b93cdf2822a6077d9dcf1d37c5a8da44bdfe3d8c3794ec197fc21f6ed99ea23c1ace402b5b7213c0ef628bee7b20076ca91d97a6433ea5e48b WHIRLPOOL 3335747ae46e45513c023474597c215b4bf8e3c7e148bb697dbe76c83683920692022dd6c73c96011c65c1021fe6b54d273b8d6b1237ef5bfa0120b273e3560f
-MISC ChangeLog 692 SHA256 31885c68ce2b96f17a854c1d702310f579d0e2fb8f0c6f74607874ad22693673 SHA512 16d321de8900adad55cb2aa4f48524859e2cf1653a3ca6ec4ef06b961dabdd791a893a693285d5358d4580b1b7eecffd678c75f1c49b5e447ca080f76b6182f3 WHIRLPOOL 01bcc7fa9cca5b752ee77bea66a1e6b6c8c635cbde0e6b012c2a55e3e6ce85d4737adb3dc15a09d34e9c80a2e073e9563d13fb30994345766c7409244d505d4b
+EBUILD howdoi-1.1.3.ebuild 694 SHA256 e2f98821f1d1dd172da8c6f965559fae11623c148f70f9ed552e30d4c12d2870 SHA512 7cf52d47f2f810a5e9f32aefaf9d329021003cc024b7d27346e4cbd97f8c3328720250014ee507a9ce78674860acbf7b2a08dca58c912ba099176dbbe1d1cb71 WHIRLPOOL 3dca01c494f5f334d330badb689cc2dc9550c163dfd4567859cbf84bc18c562dab6170498d5ac683a99944f35de2b89ff3904bcd764c86d01fbc0e234a20f28d
+MISC ChangeLog 782 SHA256 5ecad0cb451a4b87c930e6bc6d9d388420aafc8385417b602434fc128284d14e SHA512 0adb96f1b182e03ecececd5ef04acd3fab877dd7e2d47bf05d8da7d1a7983f7fb37f91202de6cc90b737866ebe3e3a949f18a5a64dd71af8a75f90df6fcd55d1 WHIRLPOOL 6e4a07159c5934ea2ff1af412b0d5f4b4b005d3f07004397d9772e744e1d01302b2c21a2bc510f7ec00d2c4ce308c53879c2a397c31f93277843cbc933f3a7cc
 MISC metadata.xml 276 SHA256 5b250d219e22171ad4b664c9f017ba2e7aa56ad80e4bc004273bacf8c67d5b00 SHA512 ad1d189b8a838b0fffa72690c2403b95e73883fe3047a9f26c2a174260dd3cce20cc8fa56e1f8d084c661b46412282b665618060b29a47efbc09ab046d16d42e WHIRLPOOL b078fb4762d447cfd3f448106c17e10f5c1a1ab2d15ad31058f3ab8d830a795135426b52d592e6dd99522dd094ea6629b85538249bf70306b7e8c66c2467a4b1
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRiRrRAAoJEMbwO6tnXQ0s03AH/0fgGd3/a6LHaRAuWmje1eaO
-lwl1L8kLeGxBhuAqprem6PCjiPZSCnG+peUjhYePeEvXVy6xmVhSVPIYnCb0sOOH
-nvGGZF08BegQQxREExfSsDLI1g/8jps2RYZdbSSVSfwHaGG/zTvLTGhTYVb2GSjW
-Lmic29K0CS9svM916TNo7TQ0e4ssvpgEeZXV/v6fHMeH8TkwYXLgSB14yVqIs4Gg
-Wy92Kvi74xf1Z9fLACqEu65H1+EbZNknBCG0LkbptoE4Kit7yjETN7CtrHQoAInB
-wCsI/gTof+Q873AyU/m4FB6C00LDqsMt//67OZPtQfh30E6JVCe02Zw65MHRmvc=
-=kQ8Y
+iEYEAREIAAYFAlIY3mAACgkQkKaRLQcq0GKqXQCfWz6rO4CqrWvMAFfOEkVyEGmt
+EYQAoIycXW7CCyvhRe1wRTq3XLiwDnjM
+=esj3
 -----END PGP SIGNATURE-----
