@@ -4,11 +4,11 @@ DESCRIPTION=Yet-another-markdown-parser but fast, pure Ruby, using a strict synt
 EAPI=5
 HOMEPAGE=http://kramdown.rubyforge.org/
 IUSE=latex elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ruby19 doc test test
-KEYWORDS=~amd64 ~arm
+KEYWORDS=~amd64 ~arm ~x86
 LICENSE=MIT
 RDEPEND=latex? ( dev-texlive/texlive-latex dev-texlive/texlive-latexextra ) ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
 REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ruby19 )
 SLOT=0
 SRC_URI=mirror://rubygems/kramdown-1.1.0.gem
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=e2253b0e362ea85e8788536fe7dcb195
+_md5_=67ba603879e3cf0e7d53afece98edba1
