@@ -4,11 +4,11 @@ DESCRIPTION=Extensions for Ruby's String class
 EAPI=5
 HOMEPAGE=http://github.com/rsl/stringex
 IUSE=test elibc_FreeBSD ruby_targets_ruby18 ruby_targets_ruby19 doc test test
-KEYWORDS=~amd64 ~arm
+KEYWORDS=~amd64 ~arm ~x86
 LICENSE=MIT
 RDEPEND=ruby_targets_ruby18? ( dev-lang/ruby:1.8 ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby18? ( virtual/rubygems[ruby_targets_ruby18] ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] )
 REQUIRED_USE=|| ( ruby_targets_ruby18 ruby_targets_ruby19 )
 SLOT=0
 SRC_URI=mirror://rubygems/stringex-2.0.8.gem
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	java-utils-2	52b7cfbf4f7225fcea7e7f18b6d83328	multilib	892e597faee02a5b94eb02ab512e7622	ruby-fakegem	6e366daedf25d7020291916549562bbf	ruby-ng	69c01a1b984ed066bc91b4397b002f6a	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=0d05346c4e0a7d0ec4bbc1ac367b4d5f
+_md5_=9d6bb168d158032833e0b8d80c481456
