@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/stringex
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stringex/ChangeLog,v 1.14 2013/08/17 06:31:14 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/stringex/ChangeLog,v 1.15 2013/08/24 16:26:05 maekke Exp $
+
+  24 Aug 2013; Markus Meier <maekke@gentoo.org> stringex-2.0.8.ebuild:
+  add ~x86, bug #478294
 
 *stringex-2.0.8 (17 Aug 2013)
 
