@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/howdoi
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/howdoi/ChangeLog,v 1.3 2013/05/07 15:17:33 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/howdoi/ChangeLog,v 1.4 2013/08/24 16:18:54 maekke Exp $
+
+  24 Aug 2013; Markus Meier <maekke@gentoo.org> howdoi-1.1.3.ebuild:
+  add ~x86, bug #481966
 
 *howdoi-1.1.3 (07 May 2013)
 
